examples/errors/self_reference.ign
<program>
  <var name=siema type=int>
    {siema + 2}
  </var>
</program>